Android: Change video frame format from BGR32 to ABGR32

When mapping video frame, data will be downloaded to QImage from frame buffer
with QImage::Format_RGBX8888 which is XBGR32 in Little Endian.

Thus added new pixel format QVideoFrame::Format_ABGR32.
Changed QVideoFrame::Format_BGR32 to QVideoFrame::Format_ABGR32.

Task-number: QTBUG-69968
Change-Id: I0f58d1a5b5cbdb5ab48ee5ad4d75f9b62f516333
Reviewed-by: Christian Stromme <christian.stromme@qt.io>