src/multimedia/video/qvideoframe.h
@@ -75,6 +75,7 @@ public:
         Format_ARGB8565_Premultiplied,
         Format_BGRA32,
         Format_BGRA32_Premultiplied,
+        Format_ABGR32,
         Format_BGR32,
         Format_BGR24,
         Format_BGR565,
