src/plugins/android/src/common/qandroidvideooutput.cpp
@@ -314,7 +314,7 @@ void QAndroidTextureVideoOutput::onFrameAvailable()
         return;
 
     QAbstractVideoBuffer *buffer = new AndroidTextureVideoBuffer(this, m_nativeSize);
-    QVideoFrame frame(buffer, m_nativeSize, QVideoFrame::Format_BGR32);
+    QVideoFrame frame(buffer, m_nativeSize, QVideoFrame::Format_ABGR32);
 
     if (m_surface->isActive() && (m_surface->surfaceFormat().pixelFormat() != frame.pixelFormat()
                                   || m_surface->surfaceFormat().frameSize() != frame.size())) {
